codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__approval_decision__tests__abort.snap
---
source: tui/src/history_cell/approval_decision.rs
expression: "render(codex_core::protocol::ReviewDecision::Abort)"
---
✗ You canceled the request to run echo
  checking migration script safety before
  applying
