codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__approval_decision__tests__approved_for_session.snap
---
source: tui/src/history_cell/approval_decision.rs
expression: "render(codex_core::protocol::ReviewDecision::ApprovedForSession)"
---
✔ You approved codex to run echo checking
  migration script safety before applying
  every time this session
